change baseencoder